force-app/main/default/objects/redwing__Auto_Assign_Rule__c/redwing__Auto_Assign_Rule__c.object-meta.xml
<CustomObject>
    <label>Auto-Assign Rule</label>
    <nameField>
        <label>Auto-Assign Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto-Assign Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>