force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Applicability__c.field-meta.xml
<CustomField>
    <fullName>redwing__Applicability__c</fullName>
    <label>Applicability</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing users only</fullName>
            </value>
            <value>
                <fullName>New and existing users</fullName>
            </value>
            <value>
                <fullName>Existing, new and updated users</fullName>
            </value>
            <value>
                <fullName>New users only</fullName>
            </value>
            <value>
                <fullName>Self-registered users</fullName>
            </value>
            <value>
                <fullName>Updated users only</fullName>
            </value>
            <value>
                <fullName>New and updated users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>