force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Due_Date_Term__c.field-meta.xml
<CustomField>
    <fullName>redwing__Due_Date_Term__c</fullName>
    <label>Due Date Term</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>