force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Due_Date_Term_Basis__c.field-meta.xml
<CustomField>
    <fullName>redwing__Due_Date_Term_Basis__c</fullName>
    <label>Due Date Term Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>