force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>