force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>