force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Operator__c.field-meta.xml
<CustomField>
    <fullName>redwing__Operator__c</fullName>
    <inlineHelpText>Operator used in this rule.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>