force-app/main/default/objects/redwing__Auto_Assign_Rule__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>