force-app/main/default/objects/redwing__Auto_Assign_Rule__c/validationRules/redwing__Due_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Due_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(redwing__Due_Date_Term__c)) &amp;&amp; redwing__Due_Date_Term__c &lt; 1</errorConditionFormula>
    <errorDisplayField>redwing__Due_Date_Term__c</errorDisplayField>
    <errorMessage>Due Date should be empty or greater than 0.</errorMessage>
</ValidationRule>